test/Fail/Issue4132.agda
open import Agda.Builtin.Float

_ : Float
_ = 1.0xA
